[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karhulaattori"
version = "1.0.0"
description = "Comprehensive math solver desktop app with a Nordic dark theme"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["math", "calculator", "sympy", "PyQt6", "desktop"]
dependencies = [
    "PyQt6>=6.4",
    "sympy>=1.12",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "scikit-image>=0.20",
    "networkx>=3.0",
    "platformdirs>=3.0",
]

[project.scripts]
karhulaattori = "karhulaattori.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["karhulaattori*"]
